--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,8 @@ https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js
   <link href="
 https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css
 " rel="stylesheet">
+<script src="jquery-3.7.1.min.js"></script>
+<script src="https://kit.fontawesome.com/795088d8e1.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
