--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,9 @@ https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css
 " rel="stylesheet">
 <script src="jquery-3.7.1.min.js"></script>
 <script src="https://kit.fontawesome.com/795088d8e1.js" crossorigin="anonymous"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Montserrat+Alternates:wght@300&display=swap" rel="stylesheet">
 </body>
 
 </html>
